# MemGraph

./: README.md  pyproject.toml  requirements.txt
backend/: base_model.py  chains.py  db_helper.py  graph.py  ltm_graph.py  nodes.py  schemas.py  state.py  stm_graph.py  store_helper.py  tools.py  utils.py
frontend/: app.py  chat_history.py  ltm_app.py  page_config.py  session_state.py  side_bar.py  stm_app.py  stream.py  utils.py
