[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langchain-experimental>=0.4.2",
    "langchain-groq>=1.1.2",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.2",
    "langgraph-checkpoint-postgres>=3.1.0",
    "protobuf==3.20.3",
    "pypdf>=6.12.2",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]
